v1.0.0/modules/schema/pages/class/TurbLCFB1.adoc
= `TurbLCFB1`
:toclevels: 4


+++Turbine load controller model developed by WECC.  This model represents a supervisory turbine load controller that acts to maintain turbine power at a set value by continuous adjustment of the turbine governor speed-load reference. This model is intended to represent slow reset 'outer loop' controllers managing the action of the turbine governor.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:TurbLCFB1`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]
**** *`TurbLCFB1`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
TurbLCFB1 {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}





















TurbineGovernorDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}













TurbLCFB1 -> TurbineGovernorDynamics: TurbineGovernorDynamics


TurbLCFB1 -> DiagramObject: DiagramObjects


TurbLCFB1 -> InstanceSet: InstanceSet


TurbLCFB1 -> Name: Names


TurbLCFB1 -> ChangeSetMember: PropertiesCIMDataObject


TurbLCFB1 -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<TurbineGovernorDynamics,`TurbineGovernorDynamics`>>
| 1
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
| +++Turbine-governor controlled by this turbine load controller.+++

| <<db,`db`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Controller deadband (<i>db</i>).  Typical value = 0.+++

| <<emax,`emax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum control error (<i>Emax</i>) (see parameter detail 4).  Typical value = 0,02.+++

| <<fb,`fb`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Frequency bias gain (<i>Fb</i>).  Typical value = 0.+++

| <<fbf,`fbf`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Frequency bias flag (<i>Fbf</i>).
true = enable frequency bias
false = disable frequency bias.
Typical value = false.+++

| <<irmax,`irmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum turbine speed/load reference bias (<i>Irmax</i>) (see parameter detail 3).  Typical value = 0.+++

| <<ki,`ki`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Integral gain (<i>Ki</i>).  Typical value = 0.+++

| <<kp,`kp`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Proportional gain (<i>Kp</i>).  Typical value = 0.+++

| <<mwbase,`mwbase`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++

| <<pbf,`pbf`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Power controller flag (<i>Pbf</i>).
true = enable load controller
false = disable load controller.
Typical value = false.+++

| <<pmwset,`pmwset`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Power controller setpoint (<i>Pmwset</i>) (see parameter detail 1).  Unit = MW. Typical value = 0.+++

| <<speedReferenceGovernor,`speedReferenceGovernor`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Type of turbine governor reference (<i>Type</i>).
true = speed reference governor
false = load reference governor.
Typical value = true.+++

| <<tpelec,`tpelec`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Power transducer time constant (<i>Tpelec</i>) (&gt;= 0).  Typical value = 0.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#db]
=== `db`
+++Controller deadband (<i>db</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbLCFB1.db`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#emax]
=== `emax`
+++Maximum control error (<i>Emax</i>) (see parameter detail 4).  Typical value = 0,02.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbLCFB1.emax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#fb]
=== `fb`
+++Frequency bias gain (<i>Fb</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbLCFB1.fb`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#fbf]
=== `fbf`
+++Frequency bias flag (<i>Fbf</i>).
true = enable frequency bias
false = disable frequency bias.
Typical value = false.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbLCFB1.fbf`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#irmax]
=== `irmax`
+++Maximum turbine speed/load reference bias (<i>Irmax</i>) (see parameter detail 3).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbLCFB1.irmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#ki]
=== `ki`
+++Integral gain (<i>Ki</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbLCFB1.ki`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kp]
=== `kp`
+++Proportional gain (<i>Kp</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbLCFB1.kp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mwbase]
=== `mwbase`
+++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbLCFB1.mwbase`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#pbf]
=== `pbf`
+++Power controller flag (<i>Pbf</i>).
true = enable load controller
false = disable load controller.
Typical value = false.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbLCFB1.pbf`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#pmwset]
=== `pmwset`
+++Power controller setpoint (<i>Pmwset</i>) (see parameter detail 1).  Unit = MW. Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbLCFB1.pmwset`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#speedReferenceGovernor]
=== `speedReferenceGovernor`
+++Type of turbine governor reference (<i>Type</i>).
true = speed reference governor
false = load reference governor.
Typical value = true.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbLCFB1.speedReferenceGovernor`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#tpelec]
=== `tpelec`
+++Power transducer time constant (<i>Tpelec</i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbLCFB1.tpelec`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#TurbineGovernorDynamics]
=== `TurbineGovernorDynamics`
+++Turbine-governor controlled by this turbine load controller.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineLoadControllerDynamics.TurbineGovernorDynamics`
| Cardinality
| 1
| Type
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| Inherited from
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]


|===


